<resources>
    <string name="main_balance">%1$d ₽</string>
    <string name="main_balance_title">Сумма чаевых</string>

    <string name="link_edit_payment_page_goal_title">Цель</string>
    <string name="link_edit_payment_page_name_subtitle">Получит ваши чаевые</string>
    <string name="link_edit_payment_page_goal_current_title">Осталось</string>
    <string name="link_edit_payment_page_set_price_hint">Введите сумму</string>
    <string name="link_edit_payment_page_set_price">От %1$d ₽ до %2$d ₽</string>
    <string name="link_edit_sender_info_name_field_title">Имя</string>
    <string name="link_edit_sender_info_email_field_title">E-mail</string>
    <string name="link_edit_sender_info_phone_field_title">Телефон</string>
    <string name="link_edit_sender_info_comment_field_title">Комментарий</string>
    <string name="link_edit_sender_info_city_field_title">Город</string>
    <string name="link_edit_payment_page_do_you_like">Как вам \"%1$s\"\?</string>
    <string name="link_edit_payment_page_tips_info_title">Оплатить комиссию</string>
    <string name="link_edit_payment_page_tips_info_subtitle">Спишем сумму чаевых и комиссию сервиса — %1$s ₽</string>
    <string name="link_edit_payment_page_bank_button">Карта</string>
    <string name="tips_field_name">Имя</string>
    <string name="tips_field_comment">Комментарий</string>
    <string name="tips_field_feedback">Обратная связь</string>
    <string name="tips_field_email_hint">На нее придет письмо после перевода чаевых</string>
    <string name="link_edit_payment_page_info_text">Нажимая кнопку оплаты, вы соглашаетесь с %1$s</string>
    <string name="link_edit_payment_page_info_full_text">Нажимая кнопку оплаты, вы соглашаетесь с %1$s и предоставляете %2$s на обработку персональных данных в соответствии с %3$s</string>
    <string name="link_edit_payment_page_info_text_subs_license">условиями</string>
    <string name="link_edit_payment_page_info_text_subs_agreement">Согласие</string>
    <string name="link_edit_payment_page_info_text_subs_policy">Политикой</string>
    <string name="link_edit_payment_page_captcha_text">This site is protected by reCAPTCHA and the Google\n%1$s and %2$s apply</string>
    <string name="link_edit_payment_page_captcha_text_subs_privacy">Privacy Policy</string>
    <string name="link_edit_payment_page_captcha_text_subs_terms">Terms of Service</string>
    <string name="card_fragment_sum_text">Сумма %1$s ₽</string>
    <string name="card_fragment_hint_card_number">Номер карты</string>
    <string name="card_fragment_hint_card_date">Дата</string>
    <string name="card_fragment_hint_card_cvc">CVC-код</string>
    <string name="card_fragment_info_label">Данные карты защищены</string>
    <string name="pay_button">Оплатить</string>
    <string name="fragment_payment_success_subtitle">Радуется вашим чаевым</string>
    <string name="fragment_payment_success_main_button">Отправить еще чаевые</string>
    <string name="fragment_payment_failure_subtitle">Не получилось оплатить</string>
    <string name="fragment_payment_failure_main_button">Попробовать еще раз</string>
    <string name="field_required">Поле обязательно</string>
    <string name="field_invalid">Некорректный формат</string>
    <string name="card_fragment_error_wrong_card_number">Некорректный номер</string>
    <string name="card_fragment_error_wrong_card_cvc">Некорректный код</string>
    <string name="fragment_payment_error_title">Что-то пошло не так</string>
    <string name="fragment_payment_error_subtitle">Попробуйте позже</string>
    <string name="fragment_payment_error_main_button">Понятно</string>
    <string name="field_amount_incorrect">Некорректная сумма</string>
    <string name="link_edit_payment_sum">Сумма в чеке %s ₽</string>
    <string name="search_label">Поиск</string>
    <string name="fragment_sbp_title">Выберите банк для подтверждения</string>
    <string name="edit_card_hint">Номер карты</string>
    <string name="edit_card_pay_button_text">Оплатить %1$s ₽</string>
    <string name="save_card_hint">Запомнить карту</string>
    <string name="save_card_new_label">Новая карта</string>
    <string name="delete_card_label">Удалить карту</string>
    <string name="dialog_delete_card_title">Точно удалить карту?</string>
    <string name="dialog_delete_card_description">Если вы захотите отправить с нее чаевые, придется заполнять данные вручную</string>
    <string name="delete_card_multi_label">Удалить карты</string>
    <string name="dialog_delete_card_multi_title">Точно удалить карты?</string>
    <string name="dialog_delete_card_multi_description">Если вы захотите отправить чаевые, придется заполнять данные вручную</string>
    <string name="leave_button">ОСТАВИТЬ</string>
    <string name="delete_button">УДАЛИТЬ</string>
    <string name="tinkoff_pay_acknowledge_title">Ждем ответа\nот Тинькофф</string>
    <string name="tinkoff_pay_acknowledge_description">Если перейти и оплатить\nв приложении не удалось,\nпопробуйте снова или выберите\nдругой способ оплаты</string>
    <string name="sbp_banks_not_found_label">Мы не нашли такой банк. Попробуйте\nсбросить фильтры</string>
    <string name="sbp_banks_not_installed_label">Приложение банка не установлено, выберите другой банк.</string>
    <string name="try_again">Повторить попытку</string>
    <string name="sbp_bank_is_opening_label">Открывается приложение\n«%1$s»</string>
    <string name="sbp_in_progress_label">Операция в обработке</string>
    <string name="show_all_banks">Показать все банки</string>
    <string name="sbp_timeout_label">Покупка не совершена. Время попытки оплаты истекло</string>

</resources>