<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_textview"
        style="@style/MediumText.24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_delete_card_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message_textview"
        style="@style/RegularText.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_delete_card_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/cancel_button"
            style="@style/MediumText.14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/leave_button"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/delete_button"
            style="@style/MediumText.14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/delete_button"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>